k8s/deployments/gcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: remix-app-service
  namespace: default
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "remix-app-backend-config"}'
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  - port: 9090
    targetPort: 9090
    protocol: TCP
    name: metrics
  selector:
    app: remix-app
