k8s/deployments/gcp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remix-app-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "remix-app-ip"
    networking.gke.io/managed-certificates: "remix-app-cert"
    networking.gke.io/v1beta1.FrontendConfig: "remix-app-frontend-config"
spec:
  rules:
  - host: app.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: remix-app-service
            port:
              number: 80
